<resources>
    <string name="app_name" translatable="false">Flash Light</string>
    <string name="facebook_app_id" translatable="false">1687919365781703</string>
    <string name="facebook_client_token" translatable="false">9c816e7374cbb1965672cc08a1da9261</string>

    <string name="english">English</string>
    <string name="vietnamese">Việt Nam</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="japanese">Japan</string>
    <string name="korean">Korea</string>
    <string name="turkish">Turkish</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>
    <string name="indonesian">Indonesia</string>
    <string name="russian">Russian</string>
    <string name="chinese">Chinese</string>
    <string name="arabic">Arabic</string>
    <string name="thai">Thai</string>
    <string name="filipino">Filipino</string>
    <string name="malay">Malay</string>
    <string name="polish">Polish</string>
    <string name="bengali">Bengali</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="romanian">Romanian</string>
    <string name="czech">Czech</string>
    <string name="greek">Greek</string>
    <string name="chinese_traditional">Chinese (Traditional)</string>

    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="action_contain_ads">This action may contain advertising</string>
    <string name="choose_one">Choose one</string>
    <string name="done">Done</string>

    <string name="connection_lost">Oops, No Internet Connection</string>
    <string name="connection_lost_message">Make sure wifi or cellular data is turned on and then try again.</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>

    <string name="title_onboarding_1">Bright Flashlight</string>
    <string name="des_onboarding_1">Turn your phone into a powerful flashlight anytime.</string>
    <string name="title_onboarding_2">SOS &amp; DJ Flash</string>
    <string name="des_onboarding_2">Use SOS mode for emergencies or DJ mode for parties.</string>
    <string name="title_onboarding_3">LED Banner</string>
    <string name="des_onboarding_3">Display scrolling LED text with customizable colors and effects.</string>
    <string name="title_onboarding_4">Screen Light</string>
    <string name="des_onboarding_4">Use your display as a bright colored light source</string>

    <string name="home">Home</string>
    <string name="for_you">For You</string>
    <string name="flashlightTitle">Flashlight</string>

    <string name="settings">Settings</string>
    <string name="rate_1_title">Oh no! We\'re sorry to hear that.</string>
    <string name="rate_2_title">Heartbreaking!</string>
    <string name="rate_3_title">Thanks for the feedback!</string>
    <string name="rate_4_title">Thanks for your support!</string>
    <string name="rate_5_title">Awesome! You made our day!</string>
    <string name="rate_1_message">Your feedback is crucial for us to improve. Could you please tell us what went wrong?</string>
    <string name="rate_2_message">What could we do to earn a 5-star rating from you?</string>
    <string name="rate_3_message">We\'d love to know how we can make your experience better.</string>
    <string name="rate_4_message">We\'re glad you\'re enjoying the app! Public reviews help us grow.</string>
    <string name="rate_5_message">Your satisfaction makes all of our hard work worthwhile.</string>
    <string name="rate_1_button">Give Private Feedback</string>
    <string name="rate_2_button">Give Private Feedback</string>
    <string name="rate_3_button">Suggest an Improvement</string>
    <string name="rate_4_button">Rate on Google Play</string>
    <string name="rate_5_button">Rate on Google Play</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_app">Rate app</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="policy_setting">Policy Setting</string>
    <string name="choose_language">Language</string>
    <string name="submit">Submit</string>
    <string name="rate_0_title">Do you like \"%s\"?</string>
    <string name="rate_title">Enjoying %s?</string>
    <string name="rate_message">Your feedback helps us improve. Please take a moment to rate your experience.</string>
    <string name="rate_us_now">Rate Us Now</string>
    <string name="thanks_for_feedback">Thanks for your feedback</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_message">Your feedback helps us improve. Please let us know how we can make your experience better.</string>
    <string name="feedback_hint">Enter your feedback here…</string>
    <string name="feedback_empty_warning">Please enter your feedback</string>
    <string name="send">Send</string>

    <string name="load_ad_fail">The ad failed to load, please try again later</string>
    <string name="premium_short_dramas">Premium Short Dramas</string>
    <string name="get_it_now">Get It Now</string>
    <string name="loading_ads">Loading ads…</string>
    <string name="get_started">Get Started!</string>
    <string name="unlock_vip_access">Unlock VIP Access</string>
    <string name="unlock_vip_access_message">Watch unlimited dramas with premium features and exclusive content.</string>
    <string name="monthly">Monthly</string>
    <string name="monthly_des">Perfect for binge-watching your favorite dramas.</string>
    <string name="yearly">Yearly</string>
    <string name="yearly_des">Save more and enjoy VIP access all year.</string>
    <string name="weekly">Weekly</string>
    <string name="weekly_des">Perfect for binge-watching your favorite dramas.</string>
    <string name="unlimited_viewing">Unlimited Viewing</string>
    <string name="hd_1080">1080p HD</string>
    <string name="ad_free">Ad-Free</string>
    <string name="vip_dramas">VIP Dramas</string>
    <string name="get_vip_access">Get VIP Access</string>
    <string name="term_of_use">Term Of Use</string>
    <string name="cancel_anytime">Cancel anytime.\nSubscription renews automatically unless canceled.</string>
    <string name="most_popular">Most Popular</string>
    <string name="best_value">Best Value</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="episode_locked">Episode Locked</string>
    <string name="episode_locked_message">Unlock VIP to continue watching instantly.</string>
    <string name="unlock_now">Unlock Now</string>
    <string name="cancel_anytime_2">Cancel anytime. Auto-renews unless canceled.</string>
    <string name="unlock_episode">Go Premium To Unlock Your Episode</string>
    <string name="just_one">Just One</string>
    <string name="unlock_premium">Unlock Premium</string>

    <string name="force_update_title">Update Required</string>
    <string name="force_update_message">A new version of the app is available. Please update to continue using the app.</string>
    <string name="force_update_button">Update Now</string>

    <string name="exit_app_title">Are You Leaving?</string>
    <string name="exit_app_message">You can come back anytime and continue where you left off.</string>
    <string name="keep_using_app">Keep Using App</string>
    <string name="exit_app">Exit App</string>
    <string name="exit">Exit</string>

    <string name="permission_title">Permission</string>
    <string name="permission_description">%s is requesting access to provide you with the best service possible</string>
    <string name="permission_camera">Camera</string>
    <string name="continue_text">Continue</string>
    <string name="flashlight">Flash Light</string>
    <string name="sos_light">SOS Light</string>
    <string name="dj_mode">DJ Mode</string>
    <string name="screen_light">Screenlight</string>
    <string name="led">LED</string>
    <string name="flash_alert">Flash Alert</string>
    <string name="state_on" translatable="false">ON</string>
    <string name="state_off" translatable="false">OFF</string>
    <string name="flash_not_supported">Flashlight is not supported on this device</string>
    <string name="coming_soon">Coming soon</string>
    <string name="screenlight_title">ScreenLight</string>
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>
    <string name="choose">Choose</string>
    <string name="hex">HEX</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>

    <!-- LED Feature Strings -->
    <string name="led_title">LED</string>
    <string name="text_label">Text</string>
    <string name="font_size">Font Size</string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="direction">Direction</string>
    <string name="visual_effects">Visual Effects</string>
    <string name="effect_glow">Glow</string>
    <string name="effect_blink">Blink</string>
    <string name="effect_neon">Neon</string>
    <string name="effect_fade">Fade</string>
    <string name="background_label">Background</string>
    <string name="default_led_text">HELLO WORLD</string>

    <!-- Flash Alert Feature Strings -->
    <string name="incoming_calls">Incoming Calls</string>
    <string name="sms">SMS</string>
    <string name="notification">Notification</string>
    <string name="tap_for_more_settings">Tap for more settings</string>
    <string name="status_colon_on">Status: On</string>
    <string name="status_colon_off">Status: Off</string>
    <string name="flashing_speed">Flashing Speed</string>
    <string name="flashing_on">Flashing ON</string>
    <string name="flashing_off">Flashing OFF</string>
    <string name="test_uppercase">TEST</string>
    <string name="select_app">Select App</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="test_incoming_call_number">0989 999 999</string>
    <string name="test_sms_sender">Message</string>
    <string name="test_sms_time">11:04</string>
    <string name="test_sms_content_1">Hey there! Hello from the other side of the city. 👋</string>
    <string name="test_sms_content_2">Good morning! Hope you\'re having a great start to your day.</string>
    <string name="test_sms_content_3">Thanks! Just grabbing some coffee. How\'s your Friday looking?</string>
    <string name="test_sms_content_4">Pretty good so far, just catching up on some reading. Have a wonderful weekend ahead!</string>
    <string name="test_notification_title">Notification</string>
    <string name="test_notification_body">This is testing notification</string>
    <string name="now">Now</string>
    <string name="permission_phone_needed">Phone permission is required to detect incoming calls and trigger flash alerts.</string>
    <string name="permission_sms_needed">SMS permission is required to detect incoming messages and trigger flash alerts.</string>
    <string name="notification_access_needed">Notification access is required to trigger flash alerts when selected apps receive notifications.</string>
    <string name="open_settings">Open Settings</string>
</resources>
